--- a/setup.tex
+++ b/setup.tex
@@ -122,7 +122,7 @@
 % LIST ENVIRONMENTS
 
 \usepackage{enumitem}
-\setlist[enumerate,1]{label={(\alph*)}}
+\setlist[enumerate,1]{label={(\alph*)}, nosep, listparindent=\parindent}
 \setlist[enumerate,2]{label={(\roman*)}}
 
 
